# oz-info-bot

./: LICENSE  docker-minio.yml  pyproject.toml
oz_info_bot/: __main__.py  app.py  conf.py  models.py  simple_svc.py  svc.py  worker.py
oz_info_bot/storage/: __init__.py  base.py  s3.py
